corrects column and row gap

--- a/style.css
+++ b/style.css
@@ -77,15 +77,15 @@ ul {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
-    row-gap: 20px;
-    column-gap: 20px;
+    row-gap: 30px;
+    column-gap: 30px;
     padding: 40px 20px;
 }
 
 .video-att {
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 10px;
     grid-area: "video";
 }
 
